correçao de alguns bugs de ediçao da img principal